# thoughtspot-admin-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  thoughtspot_admin_mcp.py
