[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thoughtspot-admin-mcp"
version = "1.0.0"
description = "ThoughtSpot Admin MCP Server"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "thoughtspot-rest-api-v1",
    "mcp",
]

[project.scripts]
thoughtspot-admin = "thoughtspot_admin_mcp:run_main"
